# VeriForm

./: .gitignore  CLAUDE.md  FUTURE_WORK.md  README.md  dominik.sh  exps_prove_llm.sh  print_progress.sh  pyproject.toml  requirements.txt  show_all_user.sh
configs/: brokenmath_perturbation.yaml  default.yaml  llm_perturbation.yaml  semantic_filter.yaml
docs/: H200_SETUP.md
playground/: dat.py  deepseek_prover.py  geodel_formalizer.py  kimina_formalizer.py  print_exp_data.py  pylean.py  read_test_json.py  read_test_pkl.py  stepfun_formalizer.py  stepfun_prover.py
scripts/: aggregate_results.py  all_formalizer.py  bootstrap_h200.sh  data_processing_all.py  distributional_test.py  dominik.py  paper_comparison.py  run_benchmark.py  run_formalize.py  run_phase1_all.sh  run_phase1_brokenmath.sh  run_phase2_all.sh  run_phase2_brokenmath.sh  run_phase2_diag.sh  run_prove.py  sync_to_gcs.sh
scripts/legacy/: all_formalizer.py  all_formalizer_llm_perturbed.py  all_proof.py  all_proof_llm_perturbed.py  data_processing.py  data_processing_all.py  dominik.py  perturbed_end2end.py  tmp_for_iacopo.py  v2_exp.py
scripts/shell/: exps_formalizer.sh  exps_prove.sh
src/veriform/: __init__.py  config.py  pipeline.py
src/veriform/autoformalization/: USAGE.md  formalizer.py  lean_verifier.py  prompts.py  templates.py
src/veriform/autoformalization_v2/: dag.py  formalizer.py  perturber.py  pipeline.py  prover.py  theorem_extractor.py
src/veriform/data/: __init__.py  loaders.py
src/veriform/data_collection/: dataset_loaders.py  reasoning_step.py
src/veriform/evaluation/: __init__.py  metrics.py  plotting.py
src/veriform/formalization/: __init__.py  base.py  fine_tuned.py  formalize.txt  llm_based.py
src/veriform/perturbation/: __init__.py  brokenmath_perturber.py  ipf.py  perturbers.py
src/veriform/preprocessing/: dag.py
src/veriform/proving/: __init__.py  deepseek_prover.py  negation.py
src/veriform/semantics/: __init__.py  drift_filter.py  (+2 more)
tests/: test_brokenmath_perturber.py  test_dataset_loaders.py  test_formalizer.py  test_formalizer_prompts.py  test_lean_negation.py  test_perturbed_model.py  test_pipeline.py  test_prover.py  test_prover_prompt.py  test_theorem_extractor.py
(+22 files in other folders)
